Kubernetes/learnings/09 section-nine-ingress/frontend/ecommerce-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-frontend-ingress
  namespace: ecommerce
spec:
  ingressClassName: nginx
  rules:
  - host: <Host> # e.g., ecommerce.example.com
    http:
      paths:
      - pathType: Prefix # Match all paths
        path: "/"
        backend:
          service:
            name: ecommerce-frontend-service
            port: 
              number: 80
